# ai-mix

./: .gitignore  AGENTS.md  DEPLOY.md  DEPLOYMENT_PLAN.md  DEPLOY_QUICK_START.md  Procfile  README.md  VERCEL_DEPLOY.md  netlify.toml  pyproject.toml  railway.json  render.yaml  requirements.txt  vercel.json
.specify/memory/: constitution.md
api/: index.py
demo/: index.html  server.py
deploy/: app.py  app_final.py  app_minimal.py  app_simple.py  netlify.toml  render.yaml  render_start.py  requirements.txt
mixer_core/: __init__.py  beat_tracker.py  bpm_detector.py  cli.py  compatibility.py  mixer.py  playlist.py  quick_analyze.py  segment_detector.py
mixer_core/transition/: __init__.py  base.py  beat_sync.py  echo_fade.py  harmonic.py
specs/001-automix/: compatibility.md  plan.md  research.md  spec.md  tasks.md
tests/unit/: test_bpm_detector.py  test_transitions.py
